--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,23 +1,29 @@
-.f-container{
+.f-container {
     justify-content: space-between;
+    border-top: 0.5px solid rgba(0, 0, 0, 0.148);
 }
-.f-left{
+
+.f-left {
     gap: 1rem;
 }
-.f-menu{
+
+.f-menu {
     gap: 1.5rem;
     margin-top: 1.5rem;
     font-weight: 500;
 }
+
 @media (max-width: 768px) {
-    .f-container{
+    .f-container {
         justify-content: center;
     }
-    .f-container>div{
-        align-items: center!important;
+
+    .f-container>div {
+        align-items: center !important;
         text-align: center;
     }
-    .f-right{
+
+    .f-right {
         justify-content: center;
     }
 }
