--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,10 +16,16 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
 }
+
+.wrapper {
+  background-color: white;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
+
 .paddings {
   padding: 1.5rem;
 }
@@ -35,6 +41,7 @@ a {
   align-items: center;
   flex-wrap: wrap;
 }
+
 .flexStart {
   display: flex;
   justify-content: flex-start;
@@ -53,12 +60,14 @@ a {
   align-items: center;
   flex-direction: column;
 }
+
 .flexColStart {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
+
 .flexColEnd {
   display: flex;
   flex-direction: column;
@@ -76,6 +85,7 @@ a {
   color: rgb(140 139 139);
   font-size: 0.9rem;
 }
+
 .orangeText {
   color: orange;
   font-size: 1.5rem;
@@ -96,7 +106,8 @@ a {
   }
 }
 
-@media (min-width: 1280px), (min-width: 768px) {
+@media (min-width: 1280px),
+(min-width: 768px) {
   .paddings {
     padding: 2rem;
   }
@@ -106,6 +117,7 @@ a {
   .primaryText {
     font-size: 1.5rem;
   }
+
   .orangeText {
     font-size: 1.2rem;
   }
@@ -120,6 +132,7 @@ a {
   border-radius: 4px;
   transition: all 300ms ease-in;
 }
+
 .button:hover {
   cursor: pointer;
   transform: scale(1.1);
